--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -5,6 +5,13 @@
   --font-mono: ui-monospace, Menlo, Monaco, "Cascadia Mono", "Segoe UI Mono",
     "Roboto Mono", "Oxygen Mono", "Ubuntu Monospace", "Source Code Pro",
     "Fira Mono", "Droid Sans Mono", "Courier New", monospace;
+
+  --color-primary-dark: rgb(38, 20, 47);
+  --clr-primary-400: rgb(81, 116, 182);
+  --clr-primary-500: rgb(90, 50, 198);
+  --clr-primary-600: hsla(262, 61%, 41%, 1);
+  --clr-primary-700: hsla(269, 75%, 31%, 1);
+  --clr-primary-800: rgb(41, 28, 52);
 }
 
 * {
@@ -23,9 +30,25 @@ body {
   max-height: 100vh;
   max-height: 100dvh;
   background: white;
+  position: relative;
 }
 
 a {
   color: inherit;
   text-decoration: none;
+}
+
+h1 {
+  font-family: var(--font-mono);
+  font-size: 4rem;
+  line-height: 0.9em;
+  text-transform: uppercase;
+}
+
+h3 {
+  font-family: var(--font-mono);
+  font-weight: 500;
+  font-size: 1.2rem;
+  line-height: 0.9em;
+  text-transform: uppercase;
 }
