--- a/src/components/NavBar/NavBar.module.css
+++ b/src/components/NavBar/NavBar.module.css
@@ -1,15 +1,55 @@
 .container {
   display: flex;
+
   flex-direction: column;
   justify-content: center;
   place-items: center;
-  gap: 3rem;
-  height: 100vh;
-  height: 100dvh;
-  padding-bottom: 5rem;
+  cursor: default;
+  width: 100%;
+  padding-bottom: 6rem;
+  height: calc(100vh - 3rem);
+  height: calc(100dvh - 4rem);
 
+  transition: opacity 0.3s ease-in-out;
   color: white;
   background: var(--color-primary-dark);
+}
+
+.header {
+  position: sticky;
+  top: 0;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  color: white;
+  background: var(--color-primary-dark);
+  width: 100vw;
+  height: 4rem;
+  transition: opacity 0.3s ease-in-out;
+}
+.title {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  gap: 3rem;
+  transition: opacity 0.3s ease-in-out;
+}
+.byeContainer {
+  transition: opacity 0.3s ease-in-out;
+  opacity: 0;
+}
+.byeHeader > * {
+  opacity: 0;
+}
+.scroll {
+  width: 2rem;
+  transition: margin-bottom 0.2s ease-in-out;
+  animation: blip 2s ease-in-out infinite;
+}
+.scroll:hover {
+  transition: margin-bottom 0.2s ease-in-out;
+  animation: blip2 0.4s ease-in-out infinite;
 }
 
 .javier {
@@ -95,5 +135,38 @@
   }
   to {
     display: none;
+  }
+}
+
+@keyframes blip {
+  from {
+    margin-bottom: 0rem;
+  }
+  70% {
+    margin-bottom: 0rem;
+  }
+  50% {
+    margin-bottom: 0.3rem;
+  }
+  30% {
+    margin-bottom: 0rem;
+  }
+
+  to {
+    margin-bottom: 0rem;
+  }
+}
+
+@keyframes blip2 {
+  from {
+    margin-bottom: 0rem;
+  }
+
+  50% {
+    margin-bottom: 0.3rem;
+  }
+
+  to {
+    margin-bottom: 0rem;
   }
 }
