Decent About design + Variable fonts

--- a/src/app/page.module.css
+++ b/src/app/page.module.css
@@ -1,19 +1,5 @@
 .main {
-  display: flex;
-  flex-direction: column;
-  justify-content: space-between;
-  align-items: center;
   position: relative;
-  padding: 6rem;
-  min-height: 50vh;
-}
-
-.profilePic {
-  position: absolute;
-  border-radius: 200rem;
-  width: 45rem;
-  height: 30rem;
-  aspect-ratio: 16/9 !important;
 }
 
 .top {
@@ -22,6 +8,11 @@
   visibility: hidden;
 
   top: -100vh;
+}
+.aboutme {
+  position: absolute;
+  left: 50%;
+  top: -4rem;
 }
 
 .chivato {
