--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,11 +1,12 @@
 :root {
   font-size: 12pt;
-  font-family: Arial, sans serif;
+  font-weight: 364;
+
   --max-width: 1200px;
   --border-radius: 12px;
   --font-mono: "Recursive", Courier, monospace;
 
-  --color-primary-light: rgb(205, 78, 165);
+  --color-primary-medium: rgb(208, 76, 166);
   --color-primary-dark: rgb(38, 20, 47);
   --color-primary-dark-trans: rgba(38, 20, 47, 0.95);
   --clr-primary-400: rgb(81, 116, 182);
@@ -25,8 +26,12 @@ html,
 body {
   scroll-behavior: smooth;
   overflow-x: hidden;
-
   max-width: 100vw;
+}
+
+p {
+  font-size: 13pt;
+  line-height: 1.5em;
 }
 
 footer {
@@ -34,10 +39,12 @@ footer {
 }
 
 body {
+  position: relative;
+
   max-height: 100vh;
   max-height: 100dvh;
+
   background: var(--color-primary-dark);
-  position: relative;
 }
 
 a {
@@ -57,12 +64,16 @@ h1 {
   font-size: 4rem;
   line-height: 0.9em;
   text-transform: uppercase;
+  font-variation-settings: "wght" 800, "MONO" 1, "CASL" 0.2, "slnt" -2, "CRSV" 0;
+}
+h1 text {
+  font-variation-settings: "wght" 560, "MONO" 1, "CASL" 0.2, "slnt" -4, "CRSV" 0;
 }
 h2 {
-  font-variation-settings: "wght" 600, "MONO" 0, "CASL" 0.3, "slnt" 0, "CRSV" 1;
-  font-size: 2.6rem;
-  line-height: 1em;
-  color: var(--color-primary-light);
+  font-variation-settings: "wght" 600, "MONO" 0, "CASL" 0, "slnt" 0, "CRSV" 1;
+  font-size: 3rem;
+  line-height: 1.2em;
+  color: var(--color-primary-medium);
 }
 
 h3 {
@@ -73,6 +84,12 @@ h3 {
 }
 
 h4 {
-  font-variation-settings: "wght" 500, "MONO" 0, "CASL" 0, "slnt" 0, "CRSV" 0;
-  font-size: 1.4rem;
+  font-weight: 500;
+  font-variation-settings: "wght" 500, "MONO" 0, "CASL" 0, "slnt" -5, "CRSV" 1;
+  font-size: 1.8rem;
+  line-height: 1.8em;
+}
+h4 b {
+  font-weight: 720;
+  font-variation-settings: "wght" 850, "MONO" 0, "CASL" 0, "slnt" 0, "CRSV" 1;
 }
